# test4

./: .gitignore  .ycm_extra_conf.py  Armor.cpp  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Armor.h  GlobalCamera.h  Serial.h  armor.h  bayer_hack.h  ctrl_param.h  precom.h
include/camera/: camera_wrapper.h
src/: Armor.cpp  Armor.cpp.backup  Serial.cpp  armor.cpp  ffttools.hpp  kcftracker.cpp  uart.cpp
src/camera/: camera_wrapper.cpp
